# differential-equations

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  fix_comparison_actually.sh  fix_comparison_clone.sh  fix_comparison_really_final.sh  fix_example_clones_last.sh  fix_example_clones_last_2.sh  fix_ivp.py  fix_test_clones_final.sh  fix_this.sh  patch_complex_test.sh  plan.md  test_final_comparison.sh  test_final_fixes_all.sh  test_plan.md  very_final_clones.sh  very_final_clones_final.sh  very_final_clones_final_2.sh
benches/: matrix_ops.rs
benches/ode/: main.rs
benches/ode/solvers/: adaptive_step.rs  fixed_step.rs  mod.rs  solutions.rs
benches/ode/systems/: chaotic.rs  linear.rs  oscillators.rs
benches/solvers/: adaptive_step.rs  fixed_step.rs  mod.rs
benches/systems/: chaotic.rs  linear.rs  mod.rs
comparison/ode/: plot_benchmark_results.py
crates/ode/: Cargo.toml
crates/ode/benches/solvers/: mod.rs  solutions.rs
crates/ode/benches/systems/: chaotic.rs  mod.rs  oscillators.rs
crates/ode/comparison/: README.md
crates/ode/comparison/problems/cr3bp/rust/src/: main.rs
crates/ode/comparison/problems/vanderpol/rust/: Cargo.toml
crates/ode/comparison/problems/vanderpol/rust/src/: main.rs
crates/ode/src/: lib.rs  solution.rs  solver.rs  system.rs
crates/ode/src/ivp/: ivp.rs  solve_ivp.rs
crates/ode/src/solout/: crossing.rs  even.rs  hyperplane.rs  mod.rs  solout.rs  t_eval.rs
crates/ode/src/solvers/: utils.rs
crates/ode/src/solvers/adams/: apcf4.rs  mod.rs
crates/ode/src/solvers/runge_kutta/: dop853.rs  macros.rs  verner.rs
crates/ode/tests/: accuracy.rs  errors.rs  interpolation.rs  statistics.rs  systems.rs
derive/: Cargo.toml
derive/src/: code_generation.rs  field_analysis.rs  implementations.rs  lib.rs
derive/tests/: basic_tests.rs  comprehensive_tests.rs  edge_cases.rs  integration_tests.rs  specialized_types.rs
differential-equations-derive/: Cargo.toml
differential-equations-derive/src/: lib.rs
docs/: README.md  ROADMAP.md  adjoint_design.md  architecture.md  bvp.md  dae.md  dde.md  defining-a-differential-equation.md  event-handling.md  introduction.md  ode.md  pde.md  pde.md_patch  quick_start.md  quick_state.md  sde.md  setting-up-a-solver.md  solout-control.md  solution-handling.md
docs/dde/: introduction.md
docs/ode/: introduction.md  references.md
docs/sde/: introduction.md
examples/adjoint/01_simple_parameter/: main.rs
examples/bvp/01_harmonic_oscillator/: main.rs
examples/dae/01_amplifier/: main.rs
examples/dae/02_robertson/: main.rs
examples/dae/03_pendulum/: main.rs
examples/dde/01_mackey_glass/: mackey_glass.typ  main.rs
examples/dde/02_breast_cancer_model/: breast_cancer_model.typ  main.rs
examples/ode/01_exponential_growth/: exponential_growth.typ  main.rs
examples/ode/02_harmonic_oscillator/: harmonic_oscillator.typ  main.rs
examples/ode/03_logistic_growth/: logistic_growth.typ  main.rs
examples/ode/04_sir_model/: main.rs  sir_model.typ
examples/ode/05_damped_pendulum/: main.rs
examples/ode/06_integration/: main.rs
examples/ode/07_cr3bp/: main.rs
examples/ode/08_damped_oscillator/: main.rs
examples/ode/09_matrix_ode/: main.rs
examples/ode/09_matrix_system/: main.rs
examples/ode/10_custom_solout/: main.rs
examples/ode/11_schrodinger/: main.rs
examples/ode/12_brusselator/: main.rs
examples/ode/13_vanderpol/: main.rs
examples/ode/14_r2bp_stm/: main.rs
examples/ode/15_forward_sensitivity_analysis/: main.rs
examples/ode/15_fsa/: main.rs
examples/ode/15_sensitivity/: main.rs
examples/ode/16_adjoint_sensitivities/: main.rs
examples/ode/16_quadrature/: main.rs
examples/ode/17_adjoint_sensitivities/: main.rs
examples/ode/17_quadrature/: main.rs
examples/ode/18_orbital_mechanics_energy_conservation/: main.rs
examples/ode/18_pipe_heat_transfer/: main.rs
examples/ode/18_telemetry/: main.rs
examples/ode/19_orbital_mechanics_energy_conservation/: main.rs
examples/ode/20_adjoint_sensitivities/: main.rs
src/: alias.rs  bvp.rs  control.rs  error.rs  interpolate.rs  ivp.rs  lib.rs  linalg.rs  parallel.rs  prelude.rs  solution.rs  state_ops.rs  stats.rs  status.rs  tolerance.rs  traits.rs  utils.rs
src/adjoint/: cost.rs  mod.rs  solve.rs  system.rs
src/bvp/: bvp.rs  mod.rs  problem.rs  shooting.rs  solve.rs
src/common/: mod.rs
src/dae/: dae.rs  mod.rs  numerical_method.rs  problem.rs  solve.rs  solve_ivp.rs
src/dde/: dde.rs  dde_problem.rs  mod.rs  numerical_method.rs  problem.rs  solve.rs  solve_dde.rs  solve_ivp.rs
src/ivp/: mod.rs
src/linalg/: error.rs  linear.rs  lu.rs  matrix.rs  mod.rs  schur.rs  util.rs
src/methods/: h_init.rs  milstein.rs  mod.rs
src/ode/: fsa.rs  hamiltonian.rs  mod.rs  numerical_method.rs  ode.rs  ode_problem.rs  problem.rs  quadrature.rs  sensitivity.rs  solution.rs  solve.rs  solve_bvp.rs  solve_ivp.rs  solve_ode.rs  solver.rs  system.rs
src/pde/: boundary.rs  grid.rs  method_of_lines.rs  mod.rs  pde.rs  projection.rs  semi_discrete.rs  spatial_discretization.rs  yee.rs
src/sde/: mod.rs  numerical_method.rs  problem.rs  sde.rs  sde_problem.rs  solve.rs  solve_ivp.rs  solve_sde.rs
src/solout/: crossing.rs  default.rs  dense.rs  even.rs  event.rs  hyperplane.rs  mod.rs  quadrature.rs  solout.rs  t_eval.rs
src/tableau/: bogacki_shampine.rs  dirk.rs  dop853.rs  dopri5.rs  dorman_prince.rs  gauss_legendre.rs  kvaerno.rs  lobatto.rs  mod.rs  radau.rs  rk4.rs  rkv76.rs  rkv87.rs  rkv98.rs  runge_kutta.rs  verner.rs
tests/: main.rs  mod.rs  parallel.rs
tests/bvp/: main.rs  shooting.rs  systems.rs
tests/dae/: from_fn.rs  main.rs
tests/dde/: accuracy.rs  from_fn.rs  interpolation.rs  main.rs  systems.rs
tests/ode/: accuracy.rs  comparison.rs  errors.rs  from_fn.rs  interpolation.rs  main.rs  mod.rs  sensitivity.rs  statistics.rs  symplectic.rs  systems.rs  vec_state.rs
tests/pde/: finite_volume.rs  from_fn.rs  main.rs  method_of_lines.rs  projection.rs  yee.rs
tests/sde/: from_fn.rs  main.rs  milstein.rs  mod.rs  test_sde_convergence.rs
(+161 files in other folders)
