[workspace]
resolver = "3"
members = [
    "crates/ode",
]

[package]
name = "differential-equations"
version = "0.1.0"
authors = ["Ryan D. Gast <ryan.d.gast@gmail.com>"]
description = "A Rust library for solving differential equations."
edition = "2024"

documentation = "https://docs.rs/differential-equations"
homepage = "https://github.com/Ryan-D-Gast/differential-equations"
repository = "https://github.com/Ryan-D-Gast/differential-equations"
readme = "README.md"

keywords = ["differential", "equations", "solver", "ode", "ivp"]
categories = ["science", "mathematics", "algorithms"]

license = "Apache-2.0"

include = [
    "src/**/*",
    "docs/**/*",
    "examples/**/*", 
    "assets/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE"
]

[features]
default = []

full = [
    "polars"
]

polars = ["ode/polars"]

[dependencies]
# Linear algebra
nalgebra = "0.33.2"

# Differential equations sub-crates
ode = { path = "crates/ode" }

# Ordinary Differential Equation (ODE) examples
[[example]]
name = "ode_01_exponential_growth"
path = "examples/ode/01_exponential_growth/main.rs"

[[example]]
name = "ode_02_harmonic_oscillator"
path = "examples/ode/02_harmonic_oscillator/main.rs"

[[example]]
name = "ode_03_logistic_growth"
path = "examples/ode/03_logistic_growth/main.rs"

[[example]]
name = "ode_04_sir_model"
path = "examples/ode/04_sir_model/main.rs"

[[example]]
name = "ode_05_damped_pendulum"
path = "examples/ode/05_damped_pendulum/main.rs"

[[example]]
name = "ode_06_integration"
path = "examples/ode/06_integration/main.rs"

[[example]]
name = "ode_07_cr3bp"
path = "examples/ode/07_cr3bp/main.rs"

[[example]]
name = "ode_08_damped_oscillator"
path = "examples/ode/08_damped_oscillator/main.rs"

[[example]]
name = "ode_09_matrix_system"
path = "examples/ode/09_matrix_system/main.rs"

[[example]]
name = "ode_10_custom_solout"
path = "examples/ode/10_custom_solout/main.rs"