[package]
name = "differential-equations"
version = "0.1.4"
authors = ["Ryan D. Gast <ryan.d.gast@gmail.com>"]
description = "A Rust library for solving differential equations."
edition = "2024"

documentation = "https://docs.rs/differential-equations"
homepage = "https://github.com/Ryan-D-Gast/differential-equations"
repository = "https://github.com/Ryan-D-Gast/differential-equations"
readme = "README.md"

keywords = ["differential", "equations", "solver", "ode", "ivp"]
categories = ["science", "mathematics", "algorithms"]

license = "Apache-2.0"

include = [
    "src/**/*",
    "docs/**/*",
    "examples/**/*", 
    "assets/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE"
]

[features]
default = ["derive"]

full = [
    "derive",
    "polars"
]

derive = ["dep:differential-equations-derive"]
polars = ["dep:polars"]

[dependencies]
nalgebra = "0.33.2" # Linear algebra vector and matrix types
num-complex = "0.4.6" # Complex numbers
differential-equations-derive = { version = "0.1.1", path = "./derive", optional = true } # Derives State trait on structs
polars = { version = "0.46.0", optional = true } # DataFrame integration for the solution

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] } # Benchmarking library
rand = "0.9.0" # Random number generation for SDE examples
rand_distr = "0.5.1" # Random distributions for SDE examples

# Ordinary Differential Equation (ODE) examples
[[example]]
name = "ode_01_exponential_growth"
path = "examples/ode/01_exponential_growth/main.rs"

[[example]]
name = "ode_02_harmonic_oscillator"
path = "examples/ode/02_harmonic_oscillator/main.rs"

[[example]]
name = "ode_03_logistic_growth"
path = "examples/ode/03_logistic_growth/main.rs"

[[example]]
name = "ode_04_sir_model"
path = "examples/ode/04_sir_model/main.rs"

[[example]]
name = "ode_05_damped_pendulum"
path = "examples/ode/05_damped_pendulum/main.rs"

[[example]]
name = "ode_06_integration"
path = "examples/ode/06_integration/main.rs"

[[example]]
name = "ode_07_cr3bp"
path = "examples/ode/07_cr3bp/main.rs"

[[example]]
name = "ode_08_damped_oscillator"
path = "examples/ode/08_damped_oscillator/main.rs"

[[example]]
name = "ode_09_matrix_ode"
path = "examples/ode/09_matrix_ode/main.rs"

[[example]]
name = "ode_10_custom_solout"
path = "examples/ode/10_custom_solout/main.rs"

[[example]]
name = "ode_11_schrodinger"
path = "examples/ode/11_schrodinger/main.rs"

[[bench]]
name = "ode_bench"
harness = false
path = "benches/ode/main.rs"

# Stochastic Differential Equation (SDE) examples
[[example]]
name = "sde_01_brownian_motion"
path = "examples/sde/01_brownian_motion/main.rs"

[[example]]
name = "sde_02_heston_model"
path = "examples/sde/02_heston_model/main.rs"

[[example]]
name = "sde_03_ornstein_uhlenbeck"
path = "examples/sde/03_ornstein_uhlenbeck/main.rs"