[package]
name = "differential-equations"
version = "0.6.1"
authors = ["Ryan D. Gast <ryan.d.gast@gmail.com>"]
description = "A Rust library for solving differential equations."
edition = "2024"

documentation = "https://docs.rs/differential-equations"
homepage = "https://github.com/Ryan-D-Gast/differential-equations"
repository = "https://github.com/Ryan-D-Gast/differential-equations"
readme = "README.md"

keywords = ["differential", "equations", "solver", "ode", "ivp"]
categories = ["science", "mathematics", "algorithms"]

license = "Apache-2.0"

include = [
    "src/**/*",
    "docs/**/*",
    "examples/**/*",
    "tests/**/*",
    "benches/**/*",
    "assets/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE"
]

[features]
default = []
nalgebra = ["dep:nalgebra"]
num-complex = ["dep:num-complex"]
polars = ["dep:polars"]
serde = ["dep:serde"]
ndarray = ["dep:ndarray"]
faer = ["dep:faer"]

[lints.clippy]
module_inception = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"

[dependencies]
simba = "0.9.1" # Scalar traits shared with nalgebra without requiring nalgebra
nalgebra = { version = "^0.34.2", optional = true } # Linear algebra state backend
num-complex = { version = "^0.4.6", optional = true } # Complex number state backend
differential-equations-derive = "0.2.0" # Derives State trait on structs
polars = { version = "^0.53.0", optional = true } # DataFrame integration for the solution
serde = { version = "1.0.228", features = ["derive"], optional = true } # solution serialization/deserialization
ndarray = { version = "0.17.2", optional = true }
faer = { version = "0.24.0", optional = true }

[dev-dependencies]
quill = "0.2.0" # Plotting for examples
criterion = { version = "0.8.2", features = ["html_reports"] } # Benchmarking library
num-dual = "0.13.6" # Dual numbers
rand = "0.10.0" # Random number generation for SDE examples
rand_distr = "0.6.0" # Random distributions for SDE examples

[[test]]
name = "ode"
path = "tests/ode/main.rs"
required-features = ["nalgebra"]

[[test]]
name = "dde"
path = "tests/dde/main.rs"
required-features = ["nalgebra"]

[[test]]
name = "bvp"
path = "tests/bvp/main.rs"

[[test]]
name = "pde"
path = "tests/pde/main.rs"

# Ordinary Differential Equation (ODE) examples
[[example]]
name = "ode_01_exponential_growth"
path = "examples/ode/01_exponential_growth/main.rs"

[[example]]
name = "ode_02_harmonic_oscillator"
path = "examples/ode/02_harmonic_oscillator/main.rs"

[[example]]
name = "ode_03_logistic_growth"
path = "examples/ode/03_logistic_growth/main.rs"
required-features = ["ndarray"]

[[example]]
name = "ode_04_sir_model"
path = "examples/ode/04_sir_model/main.rs"

[[example]]
name = "ode_05_damped_pendulum"
path = "examples/ode/05_damped_pendulum/main.rs"

[[example]]
name = "ode_06_integration"
path = "examples/ode/06_integration/main.rs"
required-features = ["faer"]

[[example]]
name = "ode_07_cr3bp"
path = "examples/ode/07_cr3bp/main.rs"
required-features = ["nalgebra"]

[[example]]
name = "ode_08_damped_oscillator"
path = "examples/ode/08_damped_oscillator/main.rs"

[[example]]
name = "ode_09_matrix_ode"
path = "examples/ode/09_matrix_ode/main.rs"
required-features = ["nalgebra"]

[[example]]
name = "ode_10_custom_solout"
path = "examples/ode/10_custom_solout/main.rs"

[[example]]
name = "ode_11_schrodinger"
path = "examples/ode/11_schrodinger/main.rs"
required-features = ["num-complex"]

[[example]]
name = "ode_12_brusselator"
path = "examples/ode/12_brusselator/main.rs"

[[example]]
name = "ode_13_vanderpol"
path = "examples/ode/13_vanderpol/main.rs"

[[example]]
name = "ode_14_r2bp_stm"
path = "examples/ode/14_r2bp_stm/main.rs"
required-features = ["nalgebra"]

[[example]]
name = "ode_15_forward_sensitivity_analysis"
path = "examples/ode/15_forward_sensitivity_analysis/main.rs"
required-features = ["nalgebra"]

[[example]]
name = "ode_16_adjoint_sensitivities"
path = "examples/ode/16_adjoint_sensitivities/main.rs"
required-features = ["nalgebra"]

[[example]]
name = "ode_17_quadrature"
path = "examples/ode/17_quadrature/main.rs"

[[example]]
name = "ode_18_pipe_heat_transfer"
path = "examples/ode/18_pipe_heat_transfer/main.rs"

# Differential-Algebraic Equation (DAE) examples
[[example]]
name = "dae_01_amplifier"
path = "examples/dae/01_amplifier/main.rs"

[[example]]
name = "dae_02_robertson"
path = "examples/dae/02_robertson/main.rs"

[[example]]
name = "dae_03_pendulum"
path = "examples/dae/03_pendulum/main.rs"

# Stochastic Differential Equation (SDE) examples
[[example]]
name = "sde_01_brownian_motion"
path = "examples/sde/01_brownian_motion/main.rs"

[[example]]
name = "sde_02_heston_model"
path = "examples/sde/02_heston_model/main.rs"

[[example]]
name = "sde_03_ornstein_uhlenbeck"
path = "examples/sde/03_ornstein_uhlenbeck/main.rs"

# Delay Differential Equation (DDE) examples
[[example]]
name = "dde_01_mackey_glass"
path = "examples/dde/01_mackey_glass/main.rs"

[[example]]
name = "dde_02_breast_cancer_model"
path = "examples/dde/02_breast_cancer_model/main.rs"

# Partial Differential Equation (PDE) examples
[[example]]
name = "pde_01_heat_equation"
path = "examples/pde/01_heat_equation/main.rs"

[[example]]
name = "pde_02_maxwell"
path = "examples/pde/02_maxwell/main.rs"

[[example]]
name = "pde_03_compressible_navier_stokes"
path = "examples/pde/03_compressible_navier_stokes/main.rs"

[[example]]
name = "pde_04_incompressible_navier_stokes"
path = "examples/pde/04_incompressible_navier_stokes/main.rs"

# Benchmarks
[[bench]]
name = "ode_solver_benchmarks"
harness = false
path = "benches/main.rs"
required-features = ["nalgebra"]
