[package]
name = "differential-equations-derive"
version = "0.1.0"
edition = "2024"
authors = ["Ryan D. Gast <ryan.d.gast@gmail.com>"]
description = "Derive macros for differential equations crate"

documentation = "https://docs.rs/differential-equations"
homepage = "https://github.com/Ryan-D-Gast/differential-equations"
repository = "https://github.com/Ryan-D-Gast/differential-equations"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.100"
quote = "1.0.40"
proc-macro2 = "1.0.95"
