[package]
name = "differential-equations-derive"
version = "0.1.3"
edition = "2024"
authors = ["Ryan D. Gast <ryan.d.gast@gmail.com>"]
description = "Derives proc macros for the differential-equations crate"

documentation = "https://docs.rs/differential-equations"
homepage = "https://github.com/Ryan-D-Gast/differential-equations"
repository = "https://github.com/Ryan-D-Gast/differential-equations"

license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.117"
quote = "1.0.45"
proc-macro2 = "1.0.106"

[dev-dependencies]
differential-equations = "0.5.2"
nalgebra = "0.34.2"
num-complex = "0.4.6"
