[package]
name = "ode"
version = "0.1.0"
edition = "2024"

[features]
default = []
polars = ["dep:polars"]

[dependencies]
nalgebra = "0.33.2"
polars = { version = "0.46.0", optional = true }

[dev-dependencies]
differential-equations = { path = "../../../differential-equations" }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "ode_bench"
harness = false
path = "benches/main.rs"